# loom-settings

./: .python-version  README.md  main.py  pyproject.toml
loom_settings/: main.py
loom_settings.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
loom_settings/components/settings/: __init__.py  component.py  schema.py  widgets.py
loom_settings/core/: __init__.py  app.py  discovery.py
loom_settings/frontends/: base.py
loom_settings/frontends/dearpygui/: frontend.py
loom_settings/frontends/dearpygui/components/: base.py  settings.py
loom_settings/frontends/dearpygui/widgets/: base.py
loom_settings/schemas/: testschema.toml  testschema2.toml
main/: main.py
main/components/: base.py
main/components/settings/: schema.py
main/components/settings/adapters/: base.py
main/frontends/dearpygui/widgets/: text.py
