[project]
name = "loom-settings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dearpygui>=2.2",
    "tomlkit>=0.14.0",
]

[project.optional-dependencies]
dpg = [
    "dearpygui>=2.2",
]

[dependency-groups]
dev = [
    "hatchling>=1.29.0",
]

[project.scripts]
loom-settings = "loom_settings.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
